--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -2,7 +2,7 @@
      ViewBag.Title = "Login";
      Layout = "~/Views/Shared/LoginLayout.cshtml";
 }
-
+<script src="~/Content/js/login.js"></script>
 <div class="container-login100">
 
 
@@ -82,7 +82,7 @@
              <!---input CNPJ JURIDICA-->
              <div id="inputJuridica" class="wrap-input100 validate-input"
                   data-validate="Valid email is required: ex@abc.xyz">
-                 <input class="input100" type="text" name="email" placeholder="CNPJ">
+                 <input class="input100" type="text" name="login" placeholder="CNPJ">
                  <span class="focus-input100"></span>
                  <span class="symbol-input100">
                      <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -108,7 +108,7 @@
             <!---input CPF FISICA-->
             <div id="inputFisica" class="wrap-input100 validate-input"
                  data-validate="Valid email is required: ex@abc.xyz">
-                <input class="input100" type="text" name="email" placeholder="CPF">
+                <input class="input100" type="text" name="login" placeholder="CPF">
                 <span class="focus-input100"></span>
                 <span class="symbol-input100">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -118,7 +118,7 @@
              <!---input CNPJ Fornecedor-->
              <div id="inputFornecedor" class="wrap-input100 validate-input"
                   data-validate="Valid email is required: ex@abc.xyz">
-                 <input class="input100" type="text" name="email" placeholder="CNPJ">
+                 <input class="input100" type="text" name="login" placeholder="CNPJ">
                  <span class="focus-input100"></span>
                  <span class="symbol-input100">
                      <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -128,7 +128,7 @@
              <!---input Funcionario -->
              <div id="inputFuncionario" class="wrap-input100 validate-input"
                   data-validate="Valid email is required: ex@abc.xyz">
-                 <input class="input100" type="text" name="email" placeholder="CPF">
+                 <input class="input100" type="text" name="login" placeholder="CPF">
                  <span class="focus-input100"></span>
                  <span class="symbol-input100">
                      <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -138,7 +138,7 @@
 
             <div class="wrap-input100 validate-input"
                  data-validate="Password is required">
-                <input class="input100" type="password" name="pass" placeholder="Senha">
+                <input class="input100" type="password" name="senha" placeholder="Senha">
                 <span class="focus-input100"></span>
                 <span class="symbol-input100">
                     <i class="fa fa-lock" aria-hidden="true"></i>
@@ -146,7 +146,7 @@
             </div>
 
             <div class="container-login100-form-btn">
-                <button class="login100-form-btn">
+                <button  class="login100-form-btn">
                     Login
                 </button>
             </div>
