Val - Testando os Logins

--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -9,7 +9,7 @@
     <div class="wrap-login100">
 
 
-        <!---Switch Comprador-->
+        <!--- Comprador-->
         <div class="login100-pic js-tilt" data-tilt>
             <img style="width:80px;heigth:80px;" src="~/Content/images/comprador.png" IMG" />
             <h1 style="color:white;font-size:13px;">Comprador</h1>
@@ -82,7 +82,7 @@
              <!---input CNPJ JURIDICA-->
              <div id="inputJuridica" class="wrap-input100 validate-input"
                   data-validate="Valid email is required: ex@abc.xyz">
-                 <input class="input100" type="text" name="cnpj" placeholder="CNPJ">
+                 <input class="input100" type="text" name="cnpjComprador" placeholder="CNPJ">
                  <span class="focus-input100"></span>
                  <span class="symbol-input100">
                      <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -108,7 +108,7 @@
             <!---input CPF FISICA-->
             <div id="inputFisica" class="wrap-input100 validate-input"
                  data-validate="Valid email is required: ex@abc.xyz">
-                <input class="input100" type="text" name="cpf" placeholder="CPF">
+                <input class="input100" type="text" name="cpfComprador" placeholder="CPF">
                 <span class="focus-input100"></span>
                 <span class="symbol-input100">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -118,7 +118,7 @@
              <!---input CNPJ Fornecedor-->
              <div id="inputFornecedor" class="wrap-input100 validate-input"
                   data-validate="Valid email is required: ex@abc.xyz">
-                 <input class="input100" type="text" name="cnpj" placeholder="CNPJ">
+                 <input class="input100" type="text" name="cnpjFornecedor" placeholder="CNPJ">
                  <span class="focus-input100"></span>
                  <span class="symbol-input100">
                      <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -128,7 +128,7 @@
              <!---input Funcionario -->
              <div id="inputFuncionario" class="wrap-input100 validate-input"
                   data-validate="Valid email is required: ex@abc.xyz">
-                 <input class="input100" type="text" name="cnpj" placeholder="CPF">
+                 <input class="input100" type="text" name="codigoFuncionario" placeholder="CODIGO">
                  <span class="focus-input100"></span>
                  <span class="symbol-input100">
                      <i class="fa fa-envelope" aria-hidden="true"></i>
