--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -11,7 +11,7 @@
 
         <!--- Comprador-->
         <div class="login100-pic js-tilt" data-tilt>
-            <img style="width:80px;heigth:80px;" src="~/Content/images/comprador.png" IMG" />
+            <img style="width:80px; height:80px;" src="~/Content/images/comprador.png" IMG" />
             <h1 style="color:white;font-size:13px;">Comprador</h1>
         </div>
        
@@ -29,7 +29,7 @@
         <!---- Fornecedor-->
         <div class="login100-pic js-tilt" data-tilt>
          
-               <img style="width:80px;heigth:80px;" src="~/Content/images/Login.png" IMG" />
+               <img style="width:80px; height:80px;" src="~/Content/images/Login.png" IMG" />
             <h1 style="color:white;font-size:13px;">Fornecedor</h1>
         </div>
 
@@ -55,7 +55,7 @@
              <div id="fisica" data-tilt="" style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg); float: left;
                 margin: 0px 74px 10px;margin-left: 15px;padding-bottom: 51px;">
 
-                 <img style="width:80px;heigth:80px;" src="/Content/images/comprador.png" img"="">
+                 <img style="width:80px; height:80px;" src="/Content/images/comprador.png" img"="">
                  <h1 style="color:white;font-size:13px;">Física</h1>
              </div>
 
@@ -75,7 +75,7 @@
              <div id="juridica" data-tilt="" style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg); float: left;
                     margin-left: 14px;">
 
-                 <img style="width:80px;heigth:80px;" src="/Content/images/Login.png" img"="">
+                 <img style="width:80px;height:80px;" src="/Content/images/Login.png" img"="">
                  <h1 style="color:white;font-size:13px;">Jurídica</h1>
              </div>
 
@@ -94,7 +94,7 @@
              <!--Aparece  Funcionario -->
 
              <div style="margin-top: -224px;will-change: transform;transform: perspective(300px) rotateX(0deg) rotateY(0deg);margin-left: -125px;width: 14px;margin-bottom: -39px;" id="funcionario" data-tilt="">
-                 <img style="width:80px;heigth:80px;" src="/Content/images/comprador.png" img"="">
+                 <img style="width:80px;height:80px;" src="/Content/images/comprador.png" img"="">
                  <h1 style="color:white;font-size:13px;width: 24px;">Funcionario</h1>
              </div>
 
