--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -2,7 +2,10 @@
      ViewBag.Title = "Login";
      Layout = "~/Views/Shared/LoginLayout.cshtml";
 }
-<script src="~/Content/js/login.js"></script>
+<script>
+
+
+</script>
 <div class="container-login100">
 
 
@@ -125,7 +128,9 @@
                  </span>
              </div>
 
-             <!---input Funcionario -->
+            
+             
+              <!---input Funcionario -->
              <div id="inputFuncionario" class="wrap-input100 validate-input"
                   data-validate="Valid email is required: ex@abc.xyz">
                  <input class="input100" type="text" name="login" placeholder="CPF">
