--- a/SupplierRanking/Content/css/style_login.css
+++ b/SupplierRanking/Content/css/style_login.css
@@ -20,7 +20,7 @@ body {
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 1.5;
-	color: #987C12;
+	color: #DAA520;
 	text-align: left;
 	background-color: #fff;
 }
