--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -18,25 +18,27 @@
     </head>
     <body>
         <!-- INÍCIO - Conteúdo -->
-        <div class="container-login100">
-            <div class="wrap-login100 justify-content-center">
+        <div class="container-login">
+            <div class="wrap-login justify-content-center">
                 @RenderBody()
             </div>
         </div>
         <!-- FIM - Conteúdo -->
 
         <!-- INÍCIO - Script's de configuração -->
-        <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
+        
         <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
-        <script src="~/Content/vendor/bootstrap/js/bootstrap.js"></script>
-        <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
+
         <script src="~/Content/vendor/bootstrap/js/popper.js"></script>
         <script src="~/Content/vendor/bootstrap/js/popper.min.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script src="~/Content/vendor/bootstrap/js/tooltip.js"></script>
 
         <script src="~/Content/vendor/select2/select2.js"></script>
         <script src="~/Content/vendor/select2/select2.min.js"></script>
 
+        <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
         <script>
             $('.js-tilt').tilt({
                 scale: 1.1
